Source/WebCore/page/DOMWindow.cpp
@@ -395,7 +395,6 @@ bool DOMWindow::canShowModalDialogNow(const Frame* frame)
 DOMWindow::DOMWindow(Frame* frame)
     : m_shouldPrintWhenFinishedLoading(false)
     , m_frame(frame)
-    , m_printTimer(this, &DOMWindow::printTimerFired)
 {
 }
 
@@ -952,12 +951,6 @@ void DOMWindow::print()
     }
     m_shouldPrintWhenFinishedLoading = false;
     page->chrome()->print(m_frame);
-}
-
-void DOMWindow::printTimerFired(Timer<DOMWindow>* timer)
-{
-    ASSERT_UNUSED(timer, timer == &m_printTimer);
-    print();
 }
 
 void DOMWindow::stop()
@@ -1634,9 +1627,7 @@ void DOMWindow::finishedLoading()
 {
     if (m_shouldPrintWhenFinishedLoading) {
         m_shouldPrintWhenFinishedLoading = false;
-
-        m_printTimer.stop();
-        m_printTimer.startOneShot(0);
+        print();
     }
 }
 
